fixed text box color

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -2,6 +2,7 @@ $gray: #D8D8D8;
 $darkgray: #606060;
 $white: #ffffff;
 $darkred: #990033;
+$black: #000000;
 
 @mixin rounded-corners {
   border-radius: 5px;
@@ -107,7 +108,9 @@ a:hover, a:focus {
 
 select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input {
   height: 25px;
+  color: $black;
   }
+
 
 
 #main {
