added images can now be rotated immediately

--- a/app/views/studies/curate.html.erb
+++ b/app/views/studies/curate.html.erb
@@ -119,8 +119,7 @@
           $(
             '<a>',
             {
-              id: 'id-' + loc.id,
-              href: '#',
+              id: 'location-' + loc.id,
               class: 'thumbnail cursor',
               'data-toggle': 'modal',
               onclick: 'curateHandler.editLocation(' + loc.id + ', ' + loc.latitude + ', ' + loc.longitude + ', ' +loc.heading + ', ' + loc.pitch + ');'
