--- a/app/assets/stylesheets/studies.css.scss
+++ b/app/assets/stylesheets/studies.css.scss
@@ -1,3 +1,31 @@
 // Place all the styles related to the Studies controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+// Box containing study info
+.study-info {
+  float:right;
+  width:160px;
+}
+
+// The launch button should be big and shiny
+.study-info .study-launch {
+  font-size:2.4em;
+  padding:0.85em 0.5em 0.85em 0.5em;
+  width:100%;
+  margin-bottom:10px;
+}
+
+// The launch button should be big and shiny
+.study-info .study-open,
+.study-info .study-close {
+  font-size:1.2em;
+  padding:0.4em 0.25em 0.4em 0.25em;
+  width:100%;
+  margin-bottom:10px;
+}
+
+.study-info .votes {
+  font-size: 2em;
+  font-weight: strong;
+}
