--- a/app/views/studies/_header.html.erb
+++ b/app/views/studies/_header.html.erb
@@ -1,13 +1,27 @@
-<div style="float:right;width:200px;">
-  <small>
-  Slug: <%= @study.slug %><br />
-  Owner: <%= @study.user.email %>
-  </small>
+<!-- security - should only be available to editor -->
+<div class="study-info">
+  <%= render 'status', :study => @study %>
 </div>
+
+<script type="text/javascript">
+/**
+ * This goes with the study status partial
+ */
+function changeActiveStatus(id, status) {
+  // which function do we call
+  update = status ? ss.Study.prototype.open : ss.Study.prototype.close;
+
+  // Do the update
+  update(id, function() {
+    $('.study-info').load('/studies/' + id + '/status');
+    });
+}
+</script>
+
 <h1><%= @study.name %></h1>
 <!-- active li needs class active -->
 <!-- security - tabs should only show if there is a choice -->
-<ul class="nav nav-tabs">
+<ul class="nav nav-tabs" >
   <li class=<%= "active" if url_for() == url_for(:controller => "studies", :action => "vote", :id => @study) %>>
     <a href="<%= url_for :controller => "studies", :action => "vote", :id => @study %>">
       <i class="icon-ok" style=""></i> Vote</a>
