--- a/app/assets/stylesheets/studies.css.scss
+++ b/app/assets/stylesheets/studies.css.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the Studies controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.show-grid {
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
