--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <%= stylesheet_link_tag "application", :media => "all" %>
-    <%= javascript_include_tag 'http://maps.googleapis.com/maps/api/js?libraries=geometry,streetview&sensor=false' %>
+    <%= javascript_include_tag 'http://maps.googleapis.com/maps/api/js?libraries=geometry,visualization,streetview&sensor=false' %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
     <link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'>
