slight improvements to delete functionality

--- a/app/views/studies/curate.html.erb
+++ b/app/views/studies/curate.html.erb
@@ -1,8 +1,10 @@
 <%= render 'header', :study => @study %>
 
 
+
 <div style="float:left;width:400px;margin-right:40px;">
   <h2><span id="region_name_plain">Area: <%= @region.name %></span></h2>
+
   <%= render 'regions/base_form', :region => @region %>
 
   <button type="button" class="btn btn-primary" onclick="saveRegion();">
@@ -11,7 +13,7 @@
   <button type="button" class="btn btn-primary" onclick="$('#delete-region-modal').modal('toggle')">
     <i class="icon-trash icon-white"></i> Delete
   </button>
-  <div id="save-notice" class="alert"></div>
+  <span id="save-notice" class="alert success fade" data-alert="alert"></span>
   </div>
   <div style="float:left;width:500px;">
     <div id="map" class="map" style="float:right; width:500; height:350;"></div>
@@ -163,8 +165,8 @@
     region.update(function() {
       $('#edit-region-modal').modal('toggle');
       $('#region-name-plain').html($('#region_name').val());
-      $('#save-notice').html('Area has been saved.');
-      $("#save-notice").delay(2000).fadeOut("slow");
+      $('#save-notice').html('Area Saved');
+      $('#save-notice').addClass('in');
     });
   }
 
