--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,7 +6,7 @@
 
   <!-- <li><%= link_to t('.public_studies'), studies_path %></li> -->
   <% if user_signed_in? %>
-    <li><%= link_to t('.my_research'), studies_path %></li>
+    <li><%= link_to t('.my_research'), url_for(:controller => "studies", :action => "mine", :user_id => current_user.id) %></li>
     <li class="dropdown">
       <a href="#" class="dropdown-toggle" data-toggle="dropdown">
         <%= current_user.email %>
